--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"fuse.js": "^3.4.6",
 		"html-react-parser": "^0.10.0",
 		"isomorphic-unfetch": "^3.0.0",
+		"localStorage": "^1.0.4",
 		"lodash": "^4.17.15",
 		"moment": "^2.24.0",
 		"moment-range": "^4.0.2",
@@ -61,6 +62,7 @@
 		"react-select": "^3.0.8",
 		"react-simple-chatbot": "^0.6.1",
 		"react-svg": "^10.0.23",
+		"react-tracker": "0.0.8",
 		"react-transition-group": "^4.3.0",
 		"reactstrap": "^8.2.0",
 		"read-more-react": "^1.0.9",
